feat(projects): added 2 endpoints for returning projects by manager and assistant
